--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,7 +3,7 @@
 _bootstrap_packages:
   Alpine: python3 sudo
   Archlinux: python sudo
-  Debian: python3 sudo gnupg python3-apt
+  Debian: python3 sudo gnupg python3-apt python3-pip python3-setuptools
   Gentoo: python sudo gentoolkit
   RedHat: python3 sudo
   Suse: python python-xml sudo
